# LQR-

./: README.md  TODO  readme.md
install/: local_setup.sh  setup.sh
install/mujoco_control/lib/mujoco_control/: mujoco_control_node
install/mujoco_control/share/mujoco_control/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mujoco_sim/lib/mujoco_sim/: mujoco_sim_node
install/mujoco_sim/share/mujoco_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mujoco_sim/share/mujoco_sim/meshes/: Link1.STL  Link1_1_1.STL  Link3.STL  Link4.STL  Link4_1.STL  Link4_wheel.STL
install/mujoco_sim/share/mujoco_sim/urdf/: rm1_4.csv
log/: latest_build
src/mujoco_control/: CMakeLists.txt
src/mujoco_control/src/: mujoco_control_node.cpp
src/mujoco_sim/: package.xml  setup.py
src/mujoco_sim/launch/: sim.launch.py
src/mujoco_sim/meshes/: Link1_1.STL  Link1_wheel.STL  Link2.STL  Link2_1.STL  Link3_1.STL  Link4_1_1.STL
src/mujoco_sim/mjcf/: rm1_4.xml
src/mujoco_sim/mujoco_sim/: lqr_test.py
src/mujoco_sim/urdf/: rm1_4.urdf
